@@ -1,3 +1,8 @@
+2000-03-08  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Display/GAIA.pm: Check return value of recv() to prevent
+	infinite loops.
+
 2000-02-23  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Fix POD errors using podchecker
